[gd_scene load_steps=15 format=2]

[ext_resource path="res://Imports/bat.png" type="Texture" id=1]
[ext_resource path="res://HurtBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/Bat.gd" type="Script" id=3]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://HitBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://PlayerDetection.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Fly",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 7.0

[sub_resource type="CapsuleShape2D" id=6]
radius = 4.66667
height = 5.33333

[sub_resource type="CircleShape2D" id=8]
radius = 22.6765

[sub_resource type="CircleShape2D" id=7]
radius = 3.33333

[node name="Bat" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
collision_layer = 2
collision_mask = 512
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "Fly"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="HurtBox" parent="." instance=ExtResource( 2 )]
collision_layer = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 6 )

[node name="Stats" parent="." instance=ExtResource( 4 )]

[node name="PlayerDetection" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
modulate = Color( 1, 1, 1, 0.196078 )
shape = SubResource( 8 )

[node name="HitBox" parent="." instance=ExtResource( 5 )]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 7 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="die" from="Stats" to="." method="_on_Stats_die"]

[editable path="HurtBox"]
[editable path="PlayerDetection"]
[editable path="HitBox"]
